[aliases]
test=pytest

[metadata]
name = gbm_drm_gen
description = A DRM generator for the Fermi GBM detectors
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/grburgess/gbm_drm_gen
author_email = jmichaelburgess@gmail.com
author = J. Michael Burgess
requires_python = >=2.7.0


project_urls =
    Bug Tracker = https://github.com/grburgess/gbm_drm_gen/issues
    Source Code = https://github.com/grburgess/gbm_drm_gen


[options]
packages = find:
install_requires =
    astropy
    numpy	
    scipy
    h5py
    responsum
    gbmgeometry

    
tests_require =
    pytest
    pytest-codecov



[versioneer]
VCS=git
style=pep440
versionfile_source=gbm_drm_gen/_version.py
versionfile_build=gbm_drm_gen/_version.py
tag_prefix=v
parentdir_prefix=gbm_drm_gen-
